so createListens cron job is easier to read
